node-ports/tea/tea-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea-deployment
  labels:
    app: tea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tea
  template:
    metadata:
      labels:
        app: tea
    spec:
      containers:
      - name: tea
        image: nirulabs/tea:latest
        ports:
        - containerPort: 80
