node-ports/tea/tea-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: tea-service
spec: 
  type: NodePort
  selector: 
    app: tea
  ports: 
    - port: 8082
      targetPort: 80
      nodePort: 30003
