node-ports/tea/tea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tea-ingress
spec:
  rules:
  - host: tea.bar.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tea-service
            port:
              number: 8082
